--- a/index.html
+++ b/index.html
@@ -1,18 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PreEntrega 2 Escotto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Tienda de Ropa</title>
 </head>
+
 <body>
-    <h1>Simulador interactivo</h1>
-    <ol>
-        <li>Objetos</li>
-        <li>Arrays</li>
-        <li>Funciones de orden superior 1</li>
-        <li>Funciones de orden superior 2</li>
-    </ol>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Tienda</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container mt-5">
+        <h1 class="mb-4">Tienda de ropa</h1>
+
+        <div class="row">
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img src="https://picsum.photos/300/200?Random=1" class="card-img-top" alt="Remera">
+                    <div class="card-body">
+                        <h2 class="card-title">Remera</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi natus quasi
+                            est quisquam sint nam ex ut, dolor deserunt sapiente?.</p>
+                        <p class="card-text">$1500</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img src="https://picsum.photos/300/200?Random=2" class="card-img-top" alt="Pantalón">
+                    <div class="card-body">
+                        <h2 class="card-title">Pantalón</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi natus quasi
+                            est quisquam sint nam ex ut, dolor deserunt sapiente?.</p>
+                        <p class="card-text">$4200</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img src="https://picsum.photos/300/200?Random=3" class="card-img-top" alt="Shorts">
+                    <div class="card-body">
+                        <h2 class="card-title">Shorts</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi natus quasi
+                            est quisquam sint nam ex ut, dolor deserunt sapiente?.</p>
+                        <p class="card-text">$2600</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img src="https://picsum.photos/300/200?Random=4" class="card-img-top" alt="Zapatos">
+                    <div class="card-body">
+                        <h2 class="card-title">Zapatos</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi natus quasi
+                            est quisquam sint nam ex ut, dolor deserunt sapiente?.</p>
+                        <p class="card-text">$6300</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img src="https://picsum.photos/300/200?Random=5" class="card-img-top" alt="Medias">
+                    <div class="card-body">
+                        <h2 class="card-title">Medias</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi natus quasi
+                            est quisquam sint nam ex ut, dolor deserunt sapiente?.</p>
+                        <p class="card-text">$300</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2023 Tienda de ropa. Todos los derechos reservados.</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
+
 </html>
